Fixed Pill Wrapping

--- a/src/components/Projects/Project/Project.scss
+++ b/src/components/Projects/Project/Project.scss
@@ -28,7 +28,7 @@
   }
 
   .ProjectDescription {
-    width: 90%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -36,17 +36,14 @@
     text-align: center;
 
     h4 {
-      /* Display & Box Model */
       margin-bottom: 16px;
     }
 
     p {
-      /* Display & Box Model */
       margin-bottom: 16px;
     }
 
     .pills {
-      // width: 100%;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -55,7 +52,6 @@
   }
 
   .ProjectLinks {
-    /* Display & Box Model */
     display: grid;
     justify-content: center;
     align-content: center;
@@ -64,7 +60,6 @@
     grid-auto-flow: column;
 
     img {
-      /* Display & Box Model */
       width: 24px;
       height: 24px;
       margin: 8px 0;
@@ -116,7 +111,6 @@
 
 @media (min-width: $screenWidthB2) {
   .Project {
-    /* Display & Box Model */
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
     column-gap: 40px;
@@ -127,16 +121,13 @@
     .ProjectDescription {
       grid-column-start: 1;
       grid-row-start: 1;
-      /* Display & Box Model */
       justify-content: flex-start;
       align-items: flex-start;
       width: 100%;
 
-      /* Other */
       text-align: left;
 
       h4 {
-        /* Display & Box Model */
         margin-bottom: 16px;
       }
 
@@ -145,25 +136,21 @@
       }
 
       .pills {
-        /* Display & Box Model */
         margin-right: -8px;
         margin-bottom: 16px;
       }
     }
 
     .ProjectLinks {
-      /* Display & Box Model */
       justify-content: flex-start;
 
       img {
-        /* Display & Box Model */
         width: 24px;
         height: 24px;
 
         transition: all 0.3s ease-in-out;
 
         &:hover {
-          /* Other */
           transform: scale(1.4);
           cursor: pointer;
         }
@@ -182,18 +169,15 @@
   .Project {
     .ProjectDescription {
       h4 {
-        /* Display & Box Model */
         margin-bottom: 20px;
       }
 
       p {
-        /* Display & Box Model */
         width: 80%;
         margin-bottom: 20px;
       }
 
       .pills {
-        /* Display & Box Model */
         margin-bottom: 20px;
         margin-right: 16px;
       }
@@ -201,7 +185,6 @@
 
     .ProjectLinks {
       img {
-        /* Display & Box Model */
         width: 28px;
         height: 28px;
       }
@@ -213,18 +196,15 @@
   .Project {
     .ProjectDescription {
       h4 {
-        /* Display & Box Model */
         margin-bottom: 20px;
       }
 
       p {
-        /* Display & Box Model */
         width: 80%;
         margin-bottom: 20px;
       }
 
       .pills {
-        /* Display & Box Model */
         margin-bottom: 20px;
         margin-right: 16px;
       }
@@ -232,7 +212,6 @@
 
     .ProjectLinks {
       img {
-        /* Display & Box Model */
         width: 28px;
         height: 28px;
       }
@@ -248,13 +227,11 @@
       }
 
       p {
-        /* Display & Box Model */
         width: 80%;
         margin-bottom: 24px;
       }
 
       .pills {
-        /* Display & Box Model */
         margin-right: 16px;
         margin-bottom: 24px;
       }
@@ -262,7 +239,6 @@
 
     .ProjectLinks {
       img {
-        /* Display & Box Model */
         width: 28px;
         height: 28px;
       }
@@ -272,23 +248,18 @@
 
 @media (min-width: $screenWidthB5) {
   .Project {
-    /* Display & Box Model */
     margin-bottom: 60px;
 
     .ProjectDescription {
       h4 {
-        /* Display & Box Model */
         margin-bottom: 28px;
       }
 
       p {
-        /* Display & Box Model */
-        // width: 80%;
         margin-bottom: 28px;
       }
 
       .pills {
-        /* Display & Box Model */
         margin-bottom: 28px;
         margin-right: 16px;
       }
@@ -296,7 +267,6 @@
 
     .ProjectLinks {
       img {
-        /* Display & Box Model */
         width: 32px;
         height: 32px;
       }
@@ -308,26 +278,20 @@
   .Project {
     .ProjectDescription {
       h4 {
-        /* Display & Box Model */
         margin-bottom: 24px;
       }
 
       p {
-        /* Display & Box Model */
         margin-bottom: 24px;
-        // width: 50%;
       }
 
       .pills {
-        /* Display & Box Model */
         margin-bottom: 24px;
-        // margin-right: 16px;
       }
     }
 
     .ProjectLinks {
       img {
-        /* Display & Box Model */
         width: 40px;
         height: 40px;
       }
